# CacomiExamples

./: .gitignore  CNAME  README.md  index.html
Examples/: CACOMI_P1_ADDITIONS.md
Examples/BinaryExampleAPK/BadPracticesAppAndroid/: COVERAGE_CACOMI.md  cacomi_dynamic_versions.gradle  gradle.properties
Examples/BinaryExampleAPK/BadPracticesAppAndroid/app/src/main/cpp/: CMakeLists.txt  unsafe_capi.c
Examples/BinaryExampleAPK/SourceCodeForTesting/BadPracticesAppAndroid/: COVERAGE_CACOMI.md  settings.gradle.kts
Examples/BinaryExampleIPA/BadPracticesIPA 2026-06-08 15-51-24/: DistributionSummary.plist  ExportOptions.plist
Examples/BinaryExampleIPA/BadPracticesIPA/AppData/: keystore.p12  leaked_rsa_key.pem  public_key.pem  signing.key
Examples/BinaryExampleIPA/BadPracticesIPA/BadPracticesIPA/: ContentView.swift  Info.plist  LoginManager.swift  Secrets.swift  config.xml  secrets.json  (+1 more)
Examples/BinaryExampleIPA/BadPracticesIPA/BadPracticesIPA.xcodeproj/: project.pbxproj
Examples/BinaryExampleIPA/PhaseB_MachO_fixtures/: README.md  hardened_macho.dylib  no_pie_macho.dylib  rpath_hijack_macho.dylib
Examples/OtherLanguages/multilanguage_examples/: README.md
Examples/SecurityValidation/: EXPECTED.md  README.md
Examples/SecurityValidation/DetectionGaps/: AndroidDynamicAndBackground.kt  DynamicLoadingAndScripts.swift
Examples/SecurityValidation/MalformedArchives/: zip64-forced.apk
Examples/SecurityValidation/Masking/: NonSecretVerbatimControls.swift  SecretsMaskingShowcase.swift
Examples/SwiftExamples/: ExampleSingleFile.swift
css/: styles.css
js/: main.js
(+185 files in other folders)
